--- a/index.htm
+++ b/index.htm
@@ -258,7 +258,7 @@ var rlArgs = {"script":"nivo","selector":"lightbox","customEvents":"","activeGal
 				Merci au revoir !
 				</figcaption></figure><figure class='gallery-item'>
 			<div class='gallery-icon portrait'>
-				<a title="Confiance..." href="'https://democratie.assemblee-liquide.fr/img/trust.png'" data-rel="lightbox-gallery-bGlnaHRib3gtZ2FsbGVyeS0x" title="confiance"><img width="169" height="300" src="img/trust.png" class="attachment-medium size-medium" alt="" aria-describedby="gallery-1-241" /></a>
+				<a title="Confiance..." href='https://democratie.assemblee-liquide.fr/img/trust.png' data-rel="lightbox-gallery-bGlnaHRib3gtZ2FsbGVyeS0x" title="confiance"><img width="169" height="300" src="img/trust.png" class="attachment-medium size-medium" alt="" aria-describedby="gallery-1-241" /></a>
 			</div>
 				<figcaption class='wp-caption-text gallery-caption' id='gallery-1-241'>
 				Confiance
