--- a/index.htm
+++ b/index.htm
@@ -518,9 +518,11 @@ France&#8239;:
     <ul>
     <li class="page_item page-item-90"><a target="_new" href="https://chat.codefor.fr/">Code for France <em>#liquide</em></a></li> 
     <li class="page_item"><a target="_new" href="https://riot.im/app/#/room/#ric:matrix.org">Riot</a></li>
-        <li class="page_item"><a target="_new" href="https://discord.gg/uHhFAEa">Discord</a></li>
+        <li class="page_item"><a target="_new" style="text-decoration: white wavy underline;" href="https://discord.gg/uHhFAEa">Discord</a></li>
         <li class="page_item"><a target="_new" href="https://t.me/joinchat/KnRbbhUKmXsoSE_FuUSMmg
 ">Telegram</a></li>
+        <li class=""><a target="_new" href="https://democratie.gitlab.io
+">&#x1F4A7;</a><a target="_new" href="https://democratie.gitlab.io/wiki">wiki</a></li>
 <!--    <li class="page_item"><a href="https://annuel.framapad.org/p/voteliquide">Pad</a></li>
 <li class="page_item page-item-6"><a href="https://github.com/voteliquide">Github</a></li>
 	-->	</ul>
