ajout du lien vers nos chantiers sur 'Construisons...'

--- a/index.htm
+++ b/index.htm
@@ -111,7 +111,7 @@ var rlArgs = {"script":"nivo","selector":"lightbox","customEvents":"","activeGal
 			<div class="hwrapper hback">
 			</div>
 			 <img id="bg" src="img/hemicycle-vide.jpg" />
-            <em>Construisons notre assemblée et portons-la dans l'arène politique</em>
+            <em><a target="_new" href="https://democratie.gitlab.io/wiki/fr/chantiers.html">Construisons notre assemblée et portons-la dans l'arène politique</a></em>
 		</div><!-- .site-branding -->
 
 	</header><!-- #masthead -->
