corrige l'url du logo

--- a/index.htm
+++ b/index.htm
@@ -99,7 +99,7 @@ var rlArgs = {"script":"nivo","selector":"lightbox","customEvents":"","activeGal
 			<div class="hwrapper">
 
 				<div id="logowrapper">
-					<a id="logo" href="//democratie.assemblee-liquide.fr/"><img  src="//assemblee-liquide.fr/img/logo_assemblee-liquide.png" />	</a><br />
+					<a id="logo" href="//democratie.assemblee-liquide.fr/"><img  src="img/logo_assemblee-liquide.png" />	</a><br />
                     <span style="background-color: #2ab7c8; color: white;"><b>&nbsp;Plongez dans notre Assemblée Liquide !</b></span>
 				</div>
 	<!-- 			 -->
